--- a/e-com/src/css/style.css
+++ b/e-com/src/css/style.css
@@ -106,3 +106,34 @@ ul {
     flex-direction: column;
     gap: 10px;
   }
+  .userProfileContainer{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 85vh;
+    flex-direction: column;
+  }
+  .userProfileContainer a{
+    color:#66c6ef;
+  }
+  .profileImg{
+    border: 5px solid #66c6ef;
+    border-radius: 50%;
+    width: 10%;
+  }
+  .profileImg img{
+    width: 100%;
+    border-radius: 50%; 
+  }
+  .profileDetails{
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
+    width: 50%;
+    flex-direction: column;
+  }
+  .profileBio{
+    display: flex;
+    justify-content: space-between;
+  }
